okd4-administration/nginx-stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:                                                                                                                                                                                                       
  name: nginx-stack
  namespace: nginx
spec:                                                                                                                                                                                                           
  selector:                                                                                                                                                                                                     
    matchLabels:                                                                                                                                                                                                
      app: nginx-stack
  replicas: 3                                                                                                                                                                                                   
  template:                                                                                                                                                                                                     
    metadata:                                                                                                                                                                                                   
      labels:                                                                                                                                                                                                   
        app: nginx-stack
    spec:                                                                                                                                                                                                       
      containers:                                                                                                                                                                                               
      - name: nginx-stack
        image: nginxinc/nginx-unprivileged
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx
spec:
  selector:
    app: nginx-stack
    deployment: nginx-stack
  ports:
  - name: nginx-https
    port: 80
    targetPort: 443
    protocol: TCP
status:
  loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: nginx
spec:
  host: nginx-stack.sapura.com.my
  to:
    kind: Service
    name: nginx-svc
    weight: 100
  port:
    targetPort: nginx-https
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
